<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/screen"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView888"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:ellipsize="none"
        android:fontFamily="@font/digitalnumstype1"
        android:gravity="center|left"
        android:singleLine="true"
        android:text="@string/eight"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/screen"
        app:layout_constraintEnd_toEndOf="@+id/screen"
        app:layout_constraintStart_toStartOf="@+id/screen"
        app:layout_constraintTop_toTopOf="@+id/screen" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="none"
        android:fontFamily="@font/digitalnumstype1"
        android:gravity="center|left"
        android:singleLine="true"
        android:text="@string/screen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/buttonAC"
        style="@style/whiteButton"
        android:layout_marginTop="30dp"
        android:onClick="clearScreen"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/buttonPlMin"
        style="@style/whiteButton"
        android:onClick="changeSign"
        android:text="@string/plusminus"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAC"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toTopOf="@+id/buttonAC"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/buttonPercent"
        style="@style/whiteButton"
        android:onClick="toPercent"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlMin"
        app:layout_constraintStart_toEndOf="@+id/buttonPlMin"
        app:layout_constraintTop_toTopOf="@+id/buttonPlMin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/blueButton"
        android:onClick="addSignToScreen"
        android:text="÷"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlMin"
        app:layout_constraintStart_toEndOf="@+id/buttonPercent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlMin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:layout_marginTop="10dp"
        android:text="7"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC" />

    <Button
        android:id="@+id/button8"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:text="8"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button9"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:text="9"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonMult"
        style="@style/blueButton"
        android:onClick="addSignToScreen"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:layout_marginTop="10dp"
        android:text="4"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button6"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:text="6"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/blueButton"
        android:onClick="addSignToScreen"
        android:text="−"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button1"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:layout_marginTop="10dp"
        android:text="1"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:text="2"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        style="@style/whiteButton"
        android:onClick="addToScreen"
        android:text="3"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/blueButton"
        android:onClick="addSignToScreen"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#F1F3F6"
        android:onClick="addToScreen"
        android:text="0"
        android:textColor="#3A4E89"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDot"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonDot"
        style="@style/whiteButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:onClick="addDotToScreen"
        android:text=","
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonAns"
        style="@style/blueButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button"
        android:onClick="calculate"
        android:text="="
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDot"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/buttonDot"
        app:layout_constraintTop_toTopOf="@+id/buttonDot"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />


</androidx.constraintlayout.widget.ConstraintLayout>